--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "styled-components": "^5.1.1",
+    "styled-reset": "^4.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
