--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "eslint-plugin-react": "^7.20.3",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-immutable-proptypes": "^2.2.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
     "styled-components": "^5.1.1",
+    "styled-reset": "^4.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -44,7 +51,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
-    "eslint": "^7.4.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0"
   }
