--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/redux-actions": "^2.6.1",
-    "@types/styled-components": "^5.1.0",
-    "axios": "^0.19.2",
-    "eslint-plugin-react": "^7.20.3",
-    "immutable": "^4.0.0-rc.12",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-immutable-proptypes": "^2.2.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "@types/jest": "24.0.0",
+    "@types/node": "12.0.0",
+    "@types/react": "16.9.0",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "5.1.5",
+    "@types/redux-actions": "2.6.1",
+    "@types/styled-components": "5.1.0",
+    "axios": "0.19.2",
+    "eslint-plugin-react": "7.20.3",
+    "immutable": "4.0.0-rc.12",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-immutable-proptypes": "2.2.0",
+    "react-redux": "7.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
-    "styled-components": "^5.1.1",
-    "styled-reset": "^4.2.0",
-    "typescript": "~3.7.2"
+    "redux": "4.0.5",
+    "redux-actions": "2.6.5",
+    "styled-components": "5.1.1",
+    "styled-reset": "4.2.0",
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,10 +49,10 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "@typescript-eslint/eslint-plugin": "3.5.0",
+    "@typescript-eslint/parser": "3.5.0",
+    "eslint": "6.6.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-import": "2.22.0"
   }
 }
