--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "redux-actions": "2.6.5",
     "styled-components": "5.1.1",
     "styled-reset": "4.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
