--- a/package.json
+++ b/package.json
@@ -15,29 +15,29 @@
     "@types/react-router-dom": "5.1.5",
     "@types/redux-actions": "2.6.1",
     "@types/styled-components": "5.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/eslint-plugin": "2.10.0",
+    "@typescript-eslint/parser": "2.10.0",
     "axios": "0.19.2",
     "babel-eslint": "10.1.0",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "24.9.0",
     "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^9.1.2",
-    "camelcase": "^5.3.1",
+    "babel-plugin-named-asset-import": "0.3.6",
+    "babel-preset-react-app": "9.1.2",
+    "camelcase": "5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.6.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "6.6.0",
+    "eslint-config-react-app": "5.2.1",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-react-hooks": "1.6.1",
     "file-loader": "4.3.0",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "immutable": "4.0.0-rc.12",
@@ -54,8 +54,8 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "react": "16.13.1",
-    "react-app-polyfill": "^1.0.6",
-    "react-dev-utils": "^10.2.1",
+    "react-app-polyfill": "1.0.6",
+    "react-dev-utils": "10.2.1",
     "react-dom": "16.13.1",
     "react-immutable-proptypes": "2.2.0",
     "react-redux": "7.2.0",
@@ -102,7 +102,8 @@
     "@typescript-eslint/parser": "3.5.0",
     "eslint": "6.6.0",
     "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.22.0"
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-simple-import-sort": "5.0.3"
   },
   "jest": {
     "roots": [
