--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-immutable-proptypes": "^2.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "styled-components": "^5.1.1",
