--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "1.6.1",
     "file-loader": "4.3.0",
@@ -54,6 +55,7 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
     "react-dev-utils": "10.2.1",
