--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "12.0.0",
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@types/redux-actions": "2.6.1",
     "@types/styled-components": "5.1.0",
@@ -61,7 +62,7 @@
     "react-dev-utils": "10.2.1",
     "react-dom": "16.13.1",
     "react-immutable-proptypes": "2.2.0",
-    "react-redux": "7.2.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
