--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "eslint": "6.6.0",
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-simple-import-sort": "5.0.3",
     "import-sort-style-module": "6.0.0",
     "prettier": "^2.0.5",
