--- a/package.json
+++ b/package.json
@@ -108,8 +108,7 @@
     "eslint-plugin-simple-import-sort": "5.0.3",
     "import-sort-style-module": "6.0.0",
     "prettier": "^2.0.5",
-    "prettier-eslint": "^11.0.0",
-    "prettier-plugin-import-sort": "0.0.4"
+    "prettier-eslint": "^11.0.0"
   },
   "jest": {
     "roots": [
