chore: 🤖 add jose

--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "immutable": "4.0.0-rc.12",
+    "install": "^0.13.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jose": "^1.27.2",
     "mini-css-extract-plugin": "0.9.0",
+    "npm": "^6.14.7",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
