--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@reduxjs/toolkit": "1.4.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
     "@types/jest": "24.0.0",
+    "@types/jsonwebtoken": "8.5.0",
     "@types/node": "12.0.0",
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@types/redux-actions": "2.6.1",
     "@types/styled-components": "5.1.0",
@@ -43,14 +44,15 @@
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "immutable": "4.0.0-rc.12",
-    "install": "^0.13.0",
+    "install": "0.13.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
-    "jose": "^1.27.2",
+    "jsonwebtoken": "8.5.1",
+    "jwks-rsa": "1.8.1",
     "mini-css-extract-plugin": "0.9.0",
-    "npm": "^6.14.7",
+    "npm": "6.14.7",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -63,7 +65,7 @@
     "react-dev-utils": "10.2.1",
     "react-dom": "16.13.1",
     "react-immutable-proptypes": "2.2.0",
-    "react-redux": "^7.2.0",
+    "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
