--- a/dev.env
+++ b/dev.env
@@ -1,2 +1,1 @@
-REACT_APP_PRODUCTION_API_URL=https://api.checkhaebang.com
-REACT_APP_LOCAL_API_URL=http://127.0.0.1:5000
+REACT_APP_PRODUCTION_API_URL=
