--- a/dev.env
+++ b/dev.env
@@ -2,3 +2,4 @@ REACT_APP_PRODUCTION_API_URL=
 REACT_APP_DEVELOPMENT_API_URL=
 REACT_APP_SERVER_URL=
 REACT_APP_KAKAO_APP_KEY=
+REACT_APP_FACEBOOKE_APP_ID=
