--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,3 +41,7 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          REACT_APP_PRODUCTION_API_URL: ${{ secrets.REACT_APP_PRODUCTION_API_URL }}
+          REACT_APP_DEVELOPMENT_API_URL: ${{ secrets.REACT_APP_DEVELOPMENT_API_URL }}
+          REACT_APP_KAKAO_APP_KEY: ${{ secrets.REACT_APP_KAKAO_APP_KEY }}
+          REACT_APP_FACEBOOKE_APP_ID: ${{ secrets.REACT_APP_FACEBOOKE_APP_ID }}
