--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,17 @@
 {
   "hosting": {
     "public": "build",
+    "headers": [
+      {
+        "source": "**/*.html",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
