--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,26 @@ jobs:
         with:
           name: build
           path: build
+      - name: Variable to Dotenv
+        uses: TickX/var-to-dotenv@v1.1.3
+        with:
+          key: "REACT_APP_PRODUCTION_API_URL"
+          value: ${{ secrets.FIREBASE_TOKEN }}
+      - name: Variable to Dotenv
+        uses: TickX/var-to-dotenv@v1.1.3
+        with:
+          key: "REACT_APP_DEVELOPMENT_API_URL"
+          value: ${{ secrets.REACT_APP_DEVELOPMENT_API_URL }}
+      - name: Variable to Dotenv
+        uses: TickX/var-to-dotenv@v1.1.3
+        with:
+          key: "REACT_APP_KAKAO_APP_KEY"
+          value: ${{ secrets.REACT_APP_KAKAO_APP_KEY }}
+      - name: Variable to Dotenv
+        uses: TickX/var-to-dotenv@v1.1.3
+        with:
+          key: "REACT_APP_FACEBOOKE_APP_ID"
+          value: ${{ secrets.REACT_APP_FACEBOOKE_APP_ID }}
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v1.5.0
         with:
