chore: 타이틀, 설명, 파비콘 추가

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "체크해방",
+  "name": "자취방 구할땐? '체크해방'",
   "icons": [
     {
       "src": "favicon.ico",
