fix: 🐛 add firebase token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,3 +39,5 @@ jobs:
         uses: w9jds/firebase-action@v1.5.0
         with:
           args: deploy --only hosting:checkhaebang
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
