--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,5 @@ jobs:
         uses: w9jds/firebase-action@v1.5.0
         with:
           args: deploy --only hosting:checkhaebang-dev
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
