feat(rottie): 로띠 이미지 적용, eslint 제거

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint",
-    "simple-import-sort",
-    "prettier"
-  ],
-  "extends": [
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:react/recommended"
-  ],
+  "plugins": ["@typescript-eslint", "simple-import-sort", "prettier"],
+  "extends": ["plugin:@typescript-eslint/eslint-recommended", "plugin:react/recommended"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
@@ -17,26 +10,18 @@
     }
   },
   "rules": {
-    "comma-dangle": [
-      "error",
-      "always-multiline"
-    ],
+    "comma-dangle": ["error", "always-multiline"],
     "object-curly-spacing": [
       "error",
       "always",
       {
-        "objectsInObjects": false
+        "objectsInObjects": true
       }
     ],
     "react/jsx-filename-extension": [
       2,
       {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ]
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     ],
     "react/jsx-one-expression-per-line": 0,
@@ -47,15 +32,10 @@
     "@typescript-eslint/no-empty-function": [
       "error",
       {
-        "allow": [
-          "arrowFunctions"
-        ]
+        "allow": ["arrowFunctions"]
       }
     ],
-    "eol-last": [
-      "error",
-      "always"
-    ],
+    "eol-last": ["error", "always"],
     "max-len": [
       "error",
       {
@@ -92,10 +72,7 @@
   },
   "settings": {
     "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
+      "@typescript-eslint/parser": [".ts", ".tsx"]
     },
     "import/resolver": {
       "typescript": {
