--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@types/redux-actions": "2.6.1",
@@ -68,6 +69,7 @@
     "react-dom": "16.13.1",
     "react-helmet": "^6.1.0",
     "react-immutable-proptypes": "2.2.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
