--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "postbuild": "react-snap",
-    "build": "node scripts/build.js",
+    "build": "GENERATE_SOURCEMAP=false node scripts/build.js",
     "test": "node scripts/test.js",
     "prettier": "prettier --write ./**/*.ts"
   },
